<resources>
    <string name="app_name">Pinbook</string>
    <string name="sample_description">This book is a textbook for the Mobile Computing course in the D3 Management Informatics department, Faculty of Engineering, University of Trunojoyo Madura. This book presents Android-based mobile programming in an easy-to-understand tutorial format, from the basics of Android programming to publishing applications on the Play Store.</string>
    <string name="book_detail">Book Detail</string>
    <string name="back">Back</string>
    <string name="cover_book">Book Cover</string>
    <string name="stok">Stock %1$d</string>
    <string name="favorite">Favorite</string>
    <string name="deskripsi">Description</string>
    <string name="pinjam_sekarang">Borrow Now</string>
    <string name="rak_buku">Bookshelf</string>
    <string name="pengembalian_buku">Book Return</string>
    <string name="riwayat_peminjaman">Borrowing History</string>
    <string name="beranda">Home</string>
    <string name="profil">Profile</string>
    <string name="app_logo">App Logo</string>
    <string name="peminjaman_buku">Book Borrowing</string>
    <string name="Qr_Code">QR Code</string>
    <string name="change_language">Language changed successfully</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukkan_email">Enter Email</string>
    <string name="masukkan_password">Enter Password</string>
    <string name="masuk">Login</string>
    <string name="lupa_password">Forgot Password?</string>
    <string name="belum_punya_akun">Don\'t have an account? Register</string>
    <string name="nama">Full Name</string>
    <string name="masukkan_nama">Enter Full Name</string>
    <string name="konfirmasi_password">Confirm Password</string>
    <string name="masukkan_kembali_password">Re-enter Password</string>
    <string name="daftar">Register</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="masuk_link">Login</string>
    <string name="cari_buku">Search book…</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="pendidikan">Education</string>
    <string name="novel">Novel</string>
    <string name="cover_buku">Book Cover</string>
    <string name="stok_default">Stock 1/1</string>
    <string name="pinjam">Borrow</string>
    <string name="peminjaman_buku_online">Online Book Borrowing</string>
    <string name="judul_buku">Book Title</string>
    <string name="informasi_pinjaman">Loan Information</string>
    <string name="peminjaman">Borrowing Date</string>
    <string name="pengembalian">Return Date</string>
    <string name="tombol_kembali">Back Button</string>
    <string name="konfirmasi_pinjaman">Confirm Borrowing</string>
    <string name="peminjaman_berhasil">Book borrowing successful</string>
    <string name="download_qr">Download QR</string>
    <string name="tentang_saya">About Me</string>
    <string name="nomor_telepon">Phone Number</string>
    <string name="kata_sandi">Password</string>
    <string name="alamat">Address</string>
    <string name="keluar">Logout</string>
    <string name="logo_pinbook">Pinbook Logo</string>
    <string name="start_scan">Start Scan</string>
    <string name="tab_peminjaman">Tab for viewing borrowing</string>
    <string name="sedang_dipinjam">Currently Borrowed</string>
    <string name="riwayat">History</string>
</resources>
