<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Header Back + Title -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/tombol_kembali"
                app:tint="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/peminjaman_buku"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#1D1B20" />
        </RelativeLayout>

        <!-- Logo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:src="@drawable/font_pinbook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/peminjaman_buku_online"
                android:textColor="#888"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Book Card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_card"
            android:elevation="5dp"
            android:translationZ="5dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/book1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvJudulBuku"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:text="@string/judul_buku"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="1dp"
                    app:layout_constraintStart_toEndOf="@id/imgCover"
                    app:layout_constraintTop_toTopOf="@id/imgCover" />

                <TextView
                    android:id="@+id/txtSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/informasi_pinjaman"
                    android:textColor="#777"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Label + Input Peminjaman -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peminjaman"
            android:textSize="14sp"
            android:layout_marginTop="28dp"/>

        <LinearLayout
            android:id="@+id/datePinjam"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_input"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/txtDatePinjam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="mm/dd/yyyy"
                android:textColor="#9E9E9E" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>

        <!-- Label + Input Pengembalian -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pengembalian"
            android:textSize="14sp"
            android:layout_marginTop="18dp"/>

        <LinearLayout
            android:id="@+id/dateKembali"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_input"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/txtDateKembali"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="mm/dd/yyyy"
                android:textColor="#9E9E9E" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>

        <!-- Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnKonfirmasi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/konfirmasi_pinjaman"
            android:textColor="#FFFFFF"
            android:background="@drawable/bg_btn_pinjam"
            android:layout_marginTop="28dp"/>
    </LinearLayout>

</ScrollView>